--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,9 @@
     <h1>Express</h1>
     <p>Welcome to Express</p>
     <p>Hello World!</p>
+    <p>Welcome to Express</p>
+    <p>Hello World!</p>
+    <p>Welcome to Express</p>
+    <p>Hello World!</p>
   </body>
 </html>
