--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,7 @@
     <p>Hello World!</p>
     <p>Welcome to Express</p>
     <p>Hello World!</p>
+    <p>Welcome to Express</p>
+    <p>Hello World!</p>
   </body>
 </html>
